--- a/agility.html
+++ b/agility.html
@@ -7,46 +7,117 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+    /* Jungle background gradient with subtle leaf texture */
     body {
       font-family: 'Share Tech Mono', monospace;
-      background-color: #0a0a0a;
+      background: linear-gradient(135deg, #093214 0%, #14532d 80%);
+      color: #ccf6d8;
+      min-height: 100vh;
+      margin: 0;
+      position: relative;
+      overflow-x: hidden;
     }
+
+    /* Subtle animated floating leaf particles */
+    @keyframes floatLeaf {
+      0% { transform: translateY(0) rotate(0deg); opacity: 0.7; }
+      50% { transform: translateY(-20px) rotate(10deg); opacity: 1; }
+      100% { transform: translateY(0) rotate(0deg); opacity: 0.7; }
+    }
+    .leaf {
+      position: fixed;
+      width: 20px;
+      height: 20px;
+      background: url('https://cdn-icons-png.flaticon.com/512/415/415188.png') no-repeat center/contain;
+      opacity: 0.8;
+      animation: floatLeaf 6s ease-in-out infinite;
+      pointer-events: none;
+      filter: drop-shadow(0 0 2px #76b39d);
+    }
+    /* Different animation delays for multiple leaves */
+    .leaf:nth-child(1) { top: 10vh; left: 15vw; animation-delay: 0s; }
+    .leaf:nth-child(2) { top: 30vh; left: 80vw; animation-delay: 2s; }
+    .leaf:nth-child(3) { top: 60vh; left: 50vw; animation-delay: 4s; }
+    .leaf:nth-child(4) { top: 80vh; left: 20vw; animation-delay: 1s; }
+    .leaf:nth-child(5) { top: 40vh; left: 35vw; animation-delay: 3s; }
+
+    /* Header bar with glowing vine border and leafy texture */
     .header-bar {
-      background-color: #1f2937;
-      border-left: 8px solid #34d399; /* Tailwind green-400 */
+      background: linear-gradient(90deg, #196f3d, #134d28);
+      border-left: 8px solid #2ecc71; /* bright green */
       padding: 1rem 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
-      font-weight: bold;
-      box-shadow: 0 0 8px #34d399;
+      font-weight: 900;
+      box-shadow:
+        0 0 12px #2ecc71,
+        inset 0 0 20px #27ae60;
+      position: relative;
+      color: #a6f1c1;
+      user-select: none;
+      font-family: 'Share Tech Mono', monospace;
+      text-shadow:
+        0 0 8px #2ecc71,
+        0 0 15px #27ae60;
     }
+    .header-bar::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 4rem;
+      height: 4rem;
+      background: url('https://cdn-icons-png.flaticon.com/512/415/415188.png') no-repeat center/contain;
+      filter: drop-shadow(0 0 3px #27ae60);
+      transform: translateY(-50%);
+      opacity: 0.3;
+      pointer-events: none;
+    }
+
     main {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
+
     section.trial {
-      background-color: #111827;
+      background: linear-gradient(145deg, #1e422a, #14532d);
       padding: 1rem 1.5rem;
-      border-left: 6px solid #34d399;
+      border-left: 6px solid #2ecc71;
       margin-bottom: 2rem;
-      border-radius: 0.25rem;
-      box-shadow: 0 0 8px #34d399;
+      border-radius: 0.5rem;
+      box-shadow:
+        0 0 12px #27ae60;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: default;
+      user-select: none;
     }
+    section.trial:hover {
+      transform: scale(1.03);
+      box-shadow:
+        0 0 25px #34d399,
+        0 0 40px #2ecc71;
+    }
+
     .trial-title {
-      font-size: 1.5rem;
-      font-weight: 700;
-      margin-bottom: 0.25rem;
+      font-size: 1.75rem;
+      font-weight: 900;
+      margin-bottom: 0.3rem;
+      color: #a6f1c1;
+      text-shadow: 0 0 10px #2ecc71;
     }
     .trial-subtitle {
-      font-weight: 500;
-      margin-bottom: 0.75rem;
+      font-weight: 600;
+      margin-bottom: 0.8rem;
       font-style: italic;
-      color: #a7f3d0; /* green-200 */
+      color: #7ee6a5;
     }
     .trial-info p {
-      margin-bottom: 0.5rem;
-      line-height: 1.4;
+      margin-bottom: 0.6rem;
+      line-height: 1.5;
+      color: #c8f7d4;
+      text-shadow: 0 0 3px #1e422a;
     }
     .trial-images {
       margin-top: 1rem;
@@ -57,13 +128,33 @@
     .trial-images img {
       max-width: 100%;
       height: auto;
-      border-radius: 0.5rem;
-      box-shadow: 0 0 10px #34d399;
+      border-radius: 0.75rem;
+      box-shadow: 0 0 15px #2ecc71;
       flex: 1 1 250px;
+      user-select: none;
+    }
+
+    /* Scrollbar styling for jungle theme */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #14532d;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #2ecc71;
+      border-radius: 10px;
+      box-shadow: inset 0 0 5px #27ae60;
     }
   </style>
 </head>
-<body class="text-white">
+<body>
+
+  <div class="leaf"></div>
+  <div class="leaf"></div>
+  <div class="leaf"></div>
+  <div class="leaf"></div>
+  <div class="leaf"></div>
 
   <header class="header-bar">
      Agility – Movement, Reflexes
@@ -81,6 +172,7 @@
         <p>Platforms fall out randomly. Race to the top.</p>
       </div>
       <div class="trial-images">
+        <!-- Add images if desired -->
       </div>
     </section>
 
@@ -91,6 +183,7 @@
         <p>Vines turn red before breaking. Players must time jumps.</p>
       </div>
       <div class="trial-images">
+        <!-- Add images if desired -->
       </div>
     </section>
 
@@ -101,6 +194,7 @@
         <p>Switch polarity to cross gaps, trick opponents into falling.</p>
       </div>
       <div class="trial-images">
+        <!-- Add images if desired -->
       </div>
     </section>
   </main>
