--- a/chaos.html
+++ b/chaos.html
@@ -7,46 +7,147 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
     body {
       font-family: 'Share Tech Mono', monospace;
       background-color: #0a0a0a;
+      color: #ddd;
+      overflow-x: hidden;
     }
+
+    /* Flickering neon glow animation */
+    @keyframes flicker {
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        text-shadow:
+          0 0 6px #a78bfa,
+          0 0 15px #a78bfa,
+          0 0 20px #c4b5fd,
+          0 0 30px #a78bfa;
+        opacity: 1;
+      }
+      20%, 22%, 24%, 55% {
+        text-shadow: none;
+        opacity: 0.8;
+      }
+    }
+
+    /* Glitch effect */
+    @keyframes glitch {
+      0% {
+        clip-path: inset(0 0 0 0);
+        transform: translate(0);
+      }
+      20% {
+        clip-path: inset(10% 0 85% 0);
+        transform: translate(-2px, -2px);
+      }
+      40% {
+        clip-path: inset(85% 0 10% 0);
+        transform: translate(2px, 2px);
+      }
+      60% {
+        clip-path: inset(10% 0 85% 0);
+        transform: translate(-2px, 2px);
+      }
+      80% {
+        clip-path: inset(85% 0 10% 0);
+        transform: translate(2px, -2px);
+      }
+      100% {
+        clip-path: inset(0 0 0 0);
+        transform: translate(0);
+      }
+    }
+
     .header-bar {
       background-color: #1f2937;
-      border-left: 8px solid #a78bfa; /* Tailwind purple-400 */
+      border-left: 8px solid #a78bfa; /* purple-400 */
       padding: 1rem 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
-      font-weight: bold;
-      box-shadow: 0 0 8px #a78bfa;
+      font-weight: 900;
+      box-shadow:
+        0 0 12px #a78bfa,
+        inset 0 0 25px #a78bfa;
+      color: #c4b5fd;
+      position: relative;
+      user-select: none;
+      animation: flicker 3s infinite alternate;
+      letter-spacing: 0.05em;
     }
+    /* Glitch text overlay for header */
+    .header-bar::before,
+    .header-bar::after {
+      content: attr(data-text);
+      position: absolute;
+      top: 0;
+      left: 2rem;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      color: #a78bfa;
+      background: transparent;
+      clip-path: inset(0);
+      opacity: 0.6;
+      animation: glitch 2.5s infinite;
+      user-select: none;
+      pointer-events: none;
+    }
+    .header-bar::after {
+      left: 2.05rem;
+      color: #c4b5fd;
+      animation-delay: 1.25s;
+    }
+
     main {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
+
     section.trial {
       background-color: #111827;
       padding: 1rem 1.5rem;
       border-left: 6px solid #a78bfa;
       margin-bottom: 2rem;
       border-radius: 0.25rem;
-      box-shadow: 0 0 8px #a78bfa;
+      box-shadow:
+        0 0 12px #a78bfa;
+      transition: box-shadow 0.3s ease, transform 0.3s ease;
+      cursor: default;
+      user-select: none;
+      position: relative;
     }
+    section.trial:hover {
+      box-shadow:
+        0 0 25px #c4b5fd,
+        0 0 35px #a78bfa;
+      transform: translateY(-3px);
+    }
+
     .trial-title {
       font-size: 1.5rem;
       font-weight: 700;
       margin-bottom: 0.25rem;
+      color: #c4b5fd;
+      text-shadow:
+        0 0 8px #a78bfa;
+      animation: flicker 2.5s infinite alternate;
     }
     .trial-subtitle {
       font-weight: 500;
       margin-bottom: 0.75rem;
       font-style: italic;
-      color: #c4b5fd; /* purple-300 */
+      color: #c4b5fd;
     }
-    .trial-info p {
+    .trial-info p, .trial-info ul {
       margin-bottom: 0.5rem;
       line-height: 1.4;
+      color: #ddd;
+    }
+    .trial-info ul {
+      list-style-type: disc;
+      margin-left: 1.5rem;
     }
     .trial-images {
       margin-top: 1rem;
@@ -60,12 +161,30 @@
       border-radius: 0.5rem;
       box-shadow: 0 0 10px #a78bfa;
       flex: 1 1 250px;
+      user-select: none;
+    }
+
+    /* Subtle random flicker sparkle effect */
+    @keyframes sparkle {
+      0%, 100% { opacity: 0; transform: scale(0.8); }
+      50% { opacity: 1; transform: scale(1.2); }
+    }
+    .sparkle {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      background: #a78bfa;
+      border-radius: 50%;
+      box-shadow:
+        0 0 6px #c4b5fd;
+      animation: sparkle 3s infinite ease-in-out;
+      pointer-events: none;
     }
   </style>
 </head>
 <body class="text-white">
 
-  <header class="header-bar">
+  <header class="header-bar" data-text="Chaos – Unpredictability, Survival">
      Chaos – Unpredictability, Survival
   </header>
 
@@ -74,7 +193,7 @@
       Chaos trials throw ever-changing rules and random challenges, testing adaptability and survival instincts.
     </p>
 
-    <section class="trial">
+    <section class="trial" style="position:relative;">
       <h2 class="trial-title">"Randomizer"</h2>
       <div class="trial-info">
         <p>Every 30 seconds, a rule changes:</p>
@@ -88,9 +207,12 @@
       </div>
       <div class="trial-images">
       </div>
+      <span class="sparkle" style="top:10px; left:20px; animation-delay: 0s;"></span>
+      <span class="sparkle" style="top:50px; left:180px; animation-delay: 1.5s;"></span>
+      <span class="sparkle" style="top:80px; left:130px; animation-delay: 2.5s;"></span>
     </section>
 
-    <section class="trial">
+    <section class="trial" style="position:relative;">
       <h2 class="trial-title">"Snake Eyes"</h2>
       <div class="trial-info">
         <p>Roll a dice. Complete a challenge based on the number:</p>
@@ -102,9 +224,11 @@
       </div>
       <div class="trial-images">
       </div>
+      <span class="sparkle" style="top:15px; left:30px; animation-delay: 0.8s;"></span>
+      <span class="sparkle" style="top:60px; left:140px; animation-delay: 2s;"></span>
     </section>
 
-    <section class="trial">
+    <section class="trial" style="position:relative;">
       <h2 class="trial-title">"Spin Room"</h2>
       <div class="trial-info">
         <p>Circular spinning platform with platforms, spikes, and projectiles.</p>
@@ -112,6 +236,8 @@
       </div>
       <div class="trial-images">
       </div>
+      <span class="sparkle" style="top:10px; left:10px; animation-delay: 1.2s;"></span>
+      <span class="sparkle" style="top:40px; left:160px; animation-delay: 2.7s;"></span>
     </section>
   </main>
 
