--- a/deception.html
+++ b/deception.html
@@ -10,56 +10,140 @@
     body {
       font-family: 'Share Tech Mono', monospace;
       background-color: #0a0a0a;
+      color: #f5f3ce;
     }
     .header-bar {
-      background-color: #1f2937;
-      border-left: 8px solid #fbbf24; /* Tailwind yellow-400 */
+      background-color: #1f2937; /* slate-800 */
+      border-left: 8px solid #fbbf24; /* yellow-400 */
       padding: 1rem 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
-      font-weight: bold;
-      box-shadow: 0 0 8px #fbbf24;
+      font-weight: 900;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      color: #fbbf24;
+      text-shadow:
+        0 0 10px #fbbf24,
+        0 0 20px #a16207;
+      letter-spacing: 0.1em;
+      user-select: none;
+      text-transform: uppercase;
+      position: relative;
+      animation: flicker 3s infinite alternate ease-in-out;
     }
+    @keyframes flicker {
+      0%, 100% {
+        text-shadow:
+          0 0 12px #fbbf24,
+          0 0 25px #fbbf24,
+          0 0 40px #a16207,
+          0 0 50px #a16207;
+        opacity: 1;
+      }
+      50% {
+        text-shadow:
+          0 0 6px #fbbf24,
+          0 0 10px #fbbf24,
+          0 0 15px #a16207;
+        opacity: 0.85;
+      }
+    }
+
     main {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
+
     section.trial {
-      background-color: #111827;
+      background-color: #111827; /* slate-900 */
       padding: 1rem 1.5rem;
       border-left: 6px solid #fbbf24;
       margin-bottom: 2rem;
-      border-radius: 0.25rem;
-      box-shadow: 0 0 8px #fbbf24;
+      border-radius: 0.375rem;
+      box-shadow:
+        0 0 15px #fbbf24,
+        inset 0 0 10px #a16207;
+      position: relative;
+      overflow: hidden;
     }
+
+    section.trial::before {
+      content: '';
+      position: absolute;
+      top: -40%;
+      left: -20%;
+      width: 160%;
+      height: 200%;
+      background: radial-gradient(circle at center, #fbbf24 20%, transparent 60%);
+      opacity: 0.1;
+      animation: eeriePulse 6s ease-in-out infinite;
+      pointer-events: none;
+      filter: blur(30px);
+      mix-blend-mode: screen;
+      z-index: 0;
+    }
+
+    @keyframes eeriePulse {
+      0%, 100% {
+        transform: scale(1) translate(0, 0);
+        opacity: 0.1;
+      }
+      50% {
+        transform: scale(1.1) translate(5%, 5%);
+        opacity: 0.25;
+      }
+    }
+
     .trial-title {
       font-size: 1.5rem;
-      font-weight: 700;
-      margin-bottom: 0.25rem;
+      font-weight: 800;
+      margin-bottom: 0.3rem;
+      color: #fbbf24;
+      text-shadow:
+        0 0 8px #fbbf24,
+        0 0 15px #a16207;
+      position: relative;
+      z-index: 1;
+      user-select: text;
     }
+
     .trial-subtitle {
-      font-weight: 500;
+      font-weight: 600;
       margin-bottom: 0.75rem;
       font-style: italic;
       color: #fde68a; /* yellow-300 */
+      position: relative;
+      z-index: 1;
     }
+
     .trial-info p {
       margin-bottom: 0.5rem;
-      line-height: 1.4;
+      line-height: 1.5;
+      color: #f5f3ce;
+      position: relative;
+      z-index: 1;
+      user-select: text;
     }
+
     .trial-images {
       margin-top: 1rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
+      position: relative;
+      z-index: 1;
     }
+
     .trial-images img {
       max-width: 100%;
       height: auto;
       border-radius: 0.5rem;
-      box-shadow: 0 0 10px #fbbf24;
+      box-shadow:
+        0 0 15px #fbbf24;
       flex: 1 1 250px;
+      user-select: none;
     }
   </style>
 </head>
