--- a/strength.html
+++ b/strength.html
@@ -7,59 +7,100 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
     body {
       font-family: 'Share Tech Mono', monospace;
       background-color: #0a0a0a;
+      color: #fca5a5;
     }
+
     .header-bar {
-      background-color: #1f2937;
-      border-left: 8px solid #f87171; /* Tailwind red-400 */
+      background-color: #1f2937; /* slate-800 */
+      border-left: 8px solid #f87171; /* red-400 */
       padding: 1rem 2rem;
-      margin-bottom: 2rem;
+      margin: 2rem auto;
       font-size: 2rem;
-      font-weight: bold;
-      box-shadow: 0 0 8px #f87171;
+      font-weight: 900;
+      max-width: 800px;
+      box-shadow: 0 0 12px #f87171;
+      letter-spacing: 0.07em;
+      user-select: none;
+      color: #f87171;
+      text-transform: uppercase;
+      text-shadow:
+        0 0 6px #f87171,
+        0 0 15px #fca5a5;
+      transition: box-shadow 0.4s ease;
     }
+    .header-bar:hover {
+      box-shadow: 0 0 20px #f87171, 0 0 30px #fca5a5;
+    }
+
     main {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
+
     section.trial {
-      background-color: #111827; /* Tailwind gray-900 */
+      background-color: #111827; /* slate-900 */
       padding: 1rem 1.5rem;
       border-left: 6px solid #f87171;
       margin-bottom: 2rem;
-      border-radius: 0.25rem;
-      box-shadow: 0 0 8px #f87171;
+      border-radius: 0.375rem;
+      box-shadow: 0 0 10px #f87171;
+      transition: box-shadow 0.3s ease, transform 0.2s ease;
+      cursor: default;
+      user-select: none;
     }
+    section.trial:hover {
+      box-shadow: 0 0 25px #f87171, 0 0 35px #fca5a5;
+      transform: translateY(-3px) scale(1.02);
+    }
+
     .trial-title {
       font-size: 1.5rem;
-      font-weight: 700;
-      margin-bottom: 0.25rem;
+      font-weight: 800;
+      margin-bottom: 0.3rem;
+      color: #f87171;
+      text-shadow:
+        0 0 8px #f87171,
+        0 0 15px #fca5a5;
+      user-select: text;
     }
+
     .trial-subtitle {
-      font-weight: 500;
+      font-weight: 600;
       margin-bottom: 0.75rem;
       font-style: italic;
       color: #fca5a5; /* red-300 */
     }
-    .trial-info p {
-      margin-bottom: 0.5rem;
+
+    .trial-info p, .trial-info ul {
+      margin-bottom: 0.6rem;
       line-height: 1.4;
+      color: #fca5a5;
     }
+
+    .trial-info ul {
+      list-style-type: disc;
+      margin-left: 1.5rem;
+    }
+
     .trial-images {
       margin-top: 1rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
     }
+
     .trial-images img {
       max-width: 100%;
       height: auto;
       border-radius: 0.5rem;
-      box-shadow: 0 0 10px #f87171;
+      box-shadow: 0 0 12px #f87171;
       flex: 1 1 250px;
+      user-select: none;
     }
   </style>
 </head>
@@ -81,8 +122,7 @@
         <p>Players rotate through pull, aim, and load roles.</p>
         <p>Fastest team to hit 3 targets wins.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
     </section>
 
     <section class="trial">
@@ -92,8 +132,7 @@
         <p>Contestants are chained to a post.</p>
         <p>Must break 3 different chain locks with hammers, levers, or brute strength in a puzzle format.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
     </section>
 
     <section class="trial">
@@ -102,8 +141,7 @@
         <p>Dodge giant rotating logs, spiked pendulums, and walls closing in.</p>
         <p>Last 10 standing make it.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
     </section>
   </main>
 
