--- a/deception.html
+++ b/deception.html
@@ -7,47 +7,52 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
     body {
       font-family: 'Share Tech Mono', monospace;
-      background-color: #0a0a0a;
-      color: #f5f3ce;
+      background: linear-gradient(135deg, #1c0039 0%, #3d005f 80%);
+      color: #e1b3f8;
+      min-height: 100vh;
+      margin: 0;
+      position: relative;
+      overflow-x: hidden;
     }
+
+    @keyframes sparkleFloat {
+      0%, 100% { opacity: 0; transform: translateY(0) scale(0.8);}
+      50% { opacity: 1; transform: translateY(-10px) scale(1.1);}
+    }
+
     .header-bar {
-      background-color: #1f2937; /* slate-800 */
-      border-left: 8px solid #fbbf24; /* yellow-400 */
+      background: linear-gradient(90deg, #a50086, #e100d6);
+      border-left: 8px solid #e100d6;
       padding: 1rem 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
       font-weight: 900;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      color: #fbbf24;
-      text-shadow:
-        0 0 10px #fbbf24,
-        0 0 20px #a16207;
-      letter-spacing: 0.1em;
-      user-select: none;
-      text-transform: uppercase;
+      box-shadow:
+        0 0 12px #e100d6,
+        inset 0 0 20px #a50086;
       position: relative;
-      animation: flicker 3s infinite alternate ease-in-out;
+      color: #f0c7ff;
+      user-select: none;
+      font-family: 'Share Tech Mono', monospace;
+      text-shadow:
+        0 0 10px #e100d6,
+        0 0 20px #a50086;
     }
-    @keyframes flicker {
-      0%, 100% {
-        text-shadow:
-          0 0 12px #fbbf24,
-          0 0 25px #fbbf24,
-          0 0 40px #a16207,
-          0 0 50px #a16207;
-        opacity: 1;
-      }
-      50% {
-        text-shadow:
-          0 0 6px #fbbf24,
-          0 0 10px #fbbf24,
-          0 0 15px #a16207;
-        opacity: 0.85;
-      }
+    .header-bar::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 4rem;
+      height: 4rem;
+      background: url('https://cdn-icons-png.flaticon.com/512/833/833314.png') no-repeat center/contain;
+      filter: drop-shadow(0 0 6px #e100d6);
+      transform: translateY(-50%);
+      opacity: 0.3;
+      pointer-events: none;
     }
 
     main {
@@ -57,107 +62,91 @@
     }
 
     section.trial {
-      background-color: #111827; /* slate-900 */
+      background: linear-gradient(145deg, #350045, #58007a);
       padding: 1rem 1.5rem;
-      border-left: 6px solid #fbbf24;
+      border-left: 6px solid #e100d6;
       margin-bottom: 2rem;
-      border-radius: 0.375rem;
+      border-radius: 0.5rem;
       box-shadow:
-        0 0 15px #fbbf24,
-        inset 0 0 10px #a16207;
+        0 0 12px #e1b3f8;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: default;
+      user-select: none;
+      color: #f0c7ff;
       position: relative;
-      overflow: hidden;
     }
-
-    section.trial::before {
-      content: '';
-      position: absolute;
-      top: -40%;
-      left: -20%;
-      width: 160%;
-      height: 200%;
-      background: radial-gradient(circle at center, #fbbf24 20%, transparent 60%);
-      opacity: 0.1;
-      animation: eeriePulse 6s ease-in-out infinite;
-      pointer-events: none;
-      filter: blur(30px);
-      mix-blend-mode: screen;
-      z-index: 0;
-    }
-
-    @keyframes eeriePulse {
-      0%, 100% {
-        transform: scale(1) translate(0, 0);
-        opacity: 0.1;
-      }
-      50% {
-        transform: scale(1.1) translate(5%, 5%);
-        opacity: 0.25;
-      }
+    section.trial:hover {
+      transform: scale(1.03);
+      box-shadow:
+        0 0 25px #e100d6,
+        0 0 40px #a50086;
     }
 
     .trial-title {
-      font-size: 1.5rem;
-      font-weight: 800;
+      font-size: 1.75rem;
+      font-weight: 900;
       margin-bottom: 0.3rem;
-      color: #fbbf24;
-      text-shadow:
-        0 0 8px #fbbf24,
-        0 0 15px #a16207;
-      position: relative;
-      z-index: 1;
-      user-select: text;
+      color: #e100d6;
+      text-shadow: 0 0 12px #e100d6;
     }
-
     .trial-subtitle {
       font-weight: 600;
-      margin-bottom: 0.75rem;
+      margin-bottom: 0.8rem;
       font-style: italic;
-      color: #fde68a; /* yellow-300 */
-      position: relative;
-      z-index: 1;
+      color: #f4b9ff;
     }
-
     .trial-info p {
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.6rem;
       line-height: 1.5;
-      color: #f5f3ce;
-      position: relative;
-      z-index: 1;
-      user-select: text;
+      color: #f0c7ff;
+      text-shadow: 0 0 4px #3b0046;
     }
-
     .trial-images {
       margin-top: 1rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
-      position: relative;
-      z-index: 1;
     }
-
     .trial-images img {
       max-width: 100%;
       height: auto;
-      border-radius: 0.5rem;
-      box-shadow:
-        0 0 15px #fbbf24;
+      border-radius: 0.75rem;
+      box-shadow: 0 0 15px #e100d6;
       flex: 1 1 250px;
       user-select: none;
     }
+
+    .sparkle {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      background: #e100d6;
+      border-radius: 50%;
+      box-shadow: 0 0 15px #f4b9ff;
+      animation: sparkleFloat 5s infinite ease-in-out;
+      pointer-events: none;
+      opacity: 0;
+      mix-blend-mode: screen;
+    }
+    .sparkle.purple {
+      background: #a50086;
+      box-shadow: 0 0 15px #e100d6;
+      animation-delay: 2.5s;
+    }
   </style>
 </head>
-<body class="text-white">
+<body>
+
+  <span class="sparkle" style="top: 15vh; left: 25vw; animation-delay: 0s;"></span>
+  <span class="sparkle purple" style="top: 35vh; left: 70vw; animation-delay: 1.5s;"></span>
+  <span class="sparkle" style="top: 60vh; left: 50vw; animation-delay: 3s;"></span>
+  <span class="sparkle purple" style="top: 80vh; left: 30vw; animation-delay: 4.5s;"></span>
 
   <header class="header-bar">
-     Deception – Lies, Sabotage
+    Deception – Lies, Sabotage
   </header>
 
   <main>
-    <p>
-      Deception trials put your trust and deduction skills to the test. Who’s lying? Who’s the impostor? Outsmart your foes or get eliminated.
-    </p>
-
     <section class="trial">
       <h2 class="trial-title">"Impostor Coil"</h2>
       <div class="trial-info">
@@ -165,8 +154,10 @@
         <p>Real players must guess who’s fake and vote them out.</p>
         <p>Guess wrong, and you get eliminated instead.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
+      <span class="sparkle" style="top:12px; left:40px; animation-delay: 0s;"></span>
+      <span class="sparkle purple" style="top:70px; left:180px; animation-delay: 2.5s;"></span>
+      <span class="sparkle" style="top:45px; left:130px; animation-delay: 4s;"></span>
     </section>
 
     <section class="trial">
@@ -175,8 +166,9 @@
         <p>In pitch black, each player hears different audio clues.</p>
         <p>Must decide who is lying about what they heard to sabotage the others.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
+      <span class="sparkle" style="top:18px; left:30px; animation-delay: 1s;"></span>
+      <span class="sparkle purple" style="top:60px; left:160px; animation-delay: 3.5s;"></span>
     </section>
 
     <section class="trial">
@@ -186,8 +178,7 @@
         <p>Others guess if they’re lying.</p>
         <p>Too many wrong guesses or lies = elimination.</p>
       </div>
-      <div class="trial-images">
-      </div>
+      <div class="trial-images"></div>
     </section>
   </main>
 
