--- a/index.html
+++ b/index.html
@@ -3,418 +3,150 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SNAKEPIT: Multiplayer Survival Game</title>
+  <title>Trial Category - Mind</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@500&display=swap" rel="stylesheet" />
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
     body {
       font-family: 'Share Tech Mono', monospace;
-      background: linear-gradient(135deg, #002200, #004422, #008844, #00ffaa);
-      color: #ccffcc;
+      background-color: #000;
+      color: #ccc;
       overflow-x: hidden;
-      position: relative;
+      padding: 2rem 1rem;
     }
 
-    /* Headings get Orbitron font for techy feel */
-    h1, h2, h3 {
-      font-family: 'Orbitron', monospace;
-      position: relative;
-      display: inline-block;
-    }
-
-    /* Spinner animation */
-    @keyframes spinner-rotate {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes scale-glow {
-      0%, 100% {
-        stroke-opacity: 0.3;
-        stroke-width: 2;
-        filter: drop-shadow(0 0 2px #00ffaa);
-      }
-      50% {
-        stroke-opacity: 1;
-        stroke-width: 4;
-        filter: drop-shadow(0 0 10px #00ffaa);
-      }
-    }
-
-    .spinner {
-      animation: spinner-rotate 2.5s linear infinite;
-    }
-
-    .spinner line {
-      transform-origin: 40px 40px;
-      animation: scale-glow 1.5s ease-in-out infinite;
-    }
-
-    .spinner line:nth-child(1) { animation-delay: 0s; }
-    .spinner line:nth-child(2) { animation-delay: 0.125s; }
-    .spinner line:nth-child(3) { animation-delay: 0.25s; }
-    .spinner line:nth-child(4) { animation-delay: 0.375s; }
-    .spinner line:nth-child(5) { animation-delay: 0.5s; }
-    .spinner line:nth-child(6) { animation-delay: 0.625s; }
-    .spinner line:nth-child(7) { animation-delay: 0.75s; }
-    .spinner line:nth-child(8) { animation-delay: 0.875s; }
-    .spinner line:nth-child(9) { animation-delay: 1s; }
-    .spinner line:nth-child(10) { animation-delay: 1.125s; }
-    .spinner line:nth-child(11) { animation-delay: 1.25s; }
-    .spinner line:nth-child(12) { animation-delay: 1.375s; }
-
-
-    /* Neon Jungle Glow & Pulse for glitch text */
-    @keyframes pulseGlow {
-      0%, 100% {
-        text-shadow:
-          0 0 10px #00ff99,
-          0 0 20px #00ff99,
-          0 0 30px #00ffaa,
-          0 0 40px #00ffaa;
-        color: #aaffaa;
-      }
-      50% {
-        text-shadow:
-          0 0 20px #00ff99,
-          0 0 30px #00ffaa,
-          0 0 40px #00ffaa,
-          0 0 50px #00ffaa;
-        color: #ccffcc;
-      }
-    }
-
+    /* Glitch animation */
     @keyframes glitch {
       0% {
-        text-shadow: 0 0 5px #00ffaa, 0 0 10px #00ff99;
+        text-shadow: 2px 0 #ff004c, -2px 0 #00fff7;
       }
-      25% {
-        text-shadow: 2px -2px 2px #00ffaa, -2px 2px 2px #00ff99;
+      20% {
+        text-shadow: -2px 0 #ff004c, 2px 0 #00fff7;
       }
-      50% {
-        text-shadow: 0 0 5px #00ff99, 0 0 10px #00ffaa;
+      40% {
+        text-shadow: 2px 0 #00fff7, -2px 0 #ff004c;
       }
-      75% {
-        text-shadow: -2px 2px 2px #00ffaa, 2px -2px 2px #00ff99;
+      60% {
+        text-shadow: -2px 0 #00fff7, 2px 0 #ff004c;
       }
-      100% {
-        text-shadow: 0 0 5px #00ffaa, 0 0 10px #00ff99;
+      80%, 100% {
+        text-shadow: 2px 0 #ff004c, -2px 0 #00fff7;
       }
     }
 
-    .glitch {
-      animation: glitch 1.2s infinite, pulseGlow 3s infinite;
-      color: #00ff99;
+    /* Neon glow */
+    .glow {
+      color: #00fff7;
       text-shadow:
-        0 0 5px #00ff99,
-        0 0 10px #00ffaa,
-        0 0 15px #00ff99;
+        0 0 5px #00fff7,
+        0 0 10px #00fff7,
+        0 0 20px #00fff7,
+        0 0 40px #ff004c;
+      animation: glitch 2s infinite;
+      user-select: none;
     }
 
-    /* Neon glowing buttons */
-    a:hover {
-      background-color: #003311;
-      box-shadow: 0 0 8px #00ffaa, 0 0 15px #00ffaa, 0 0 20px #00ffaa;
-      border-color: #00ffaa;
-      color: #00ffaa;
+    header {
+      max-width: 700px;
+      margin: 0 auto 3rem;
+      font-size: 2.5rem;
+      font-weight: 900;
+      color: #ff004c;
+      border-left: 8px solid #00fff7;
+      padding-left: 1rem;
+      text-transform: uppercase;
+      text-shadow: 0 0 12px #00fff7;
+      user-select: none;
     }
 
-    /* Scanline overlay for digital effect */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      background:
-        repeating-linear-gradient(
-          to bottom,
-          rgba(0, 255, 153, 0.05),
-          rgba(0, 255, 153, 0.05) 1px,
-          transparent 1px,
-          transparent 3px
-        );
-      z-index: 1000;
+    main {
+      max-width: 700px;
+      margin: 0 auto;
     }
 
-    /* Firefly particles */
-    @keyframes firefly {
-      0%, 100% {
-        opacity: 0.2;
-        transform: translateY(0);
-      }
-      50% {
-        opacity: 1;
-        transform: translateY(-10px);
-      }
+    section.trial {
+      background: #111111;
+      border-left: 6px solid #00fff7;
+      padding: 1.5rem 2rem;
+      margin-bottom: 2.5rem;
+      border-radius: 8px;
+      box-shadow:
+        0 0 10px #00fff7,
+        inset 0 0 6px #00fff7;
+      transition: box-shadow 0.3s ease, transform 0.3s ease;
+      cursor: default;
+      user-select: none;
     }
 
-    .firefly {
-      position: fixed;
-      width: 4px;
-      height: 4px;
-      background: #00ffaa;
-      border-radius: 50%;
-      opacity: 0.5;
-      animation: firefly 3s infinite ease-in-out;
-      z-index: 1500;
-      pointer-events: none;
+    section.trial:hover {
+      box-shadow:
+        0 0 25px #ff004c,
+        0 0 40px #00fff7,
+        inset 0 0 20px #ff004c;
+      transform: translateY(-5px);
     }
 
-    /* Vine Snake SVG Decorations */
-    .vine-snake {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      fill: none;
-      stroke: #00ffaa;
-      stroke-width: 1.5;
-      stroke-linejoin: round;
-      stroke-linecap: round;
-      filter: drop-shadow(0 0 4px #00ffaa);
-      animation: pulseGlow 4s ease-in-out infinite;
-      opacity: 0.8;
-      z-index: 10;
+    h2.trial-title {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 0.4rem;
+      color: #ff004c;
+      text-shadow:
+        0 0 8px #ff004c,
+        0 0 15px #ff004c;
+      user-select: none;
     }
 
-    /* Positioning vines near headers */
-    .header-container {
-      position: relative;
-      display: inline-block;
+    .subtitle {
+      font-weight: 600;
+      color: #00fff7;
+      margin-bottom: 1rem;
+      font-style: italic;
+      user-select: none;
     }
 
-    .vine-left {
-      top: -10px;
-      left: -50px;
-      animation-delay: 0s;
+    p {
+      margin-bottom: 0.8rem;
+      line-height: 1.5;
+      color: #ccc;
+      user-select: text;
     }
-
-    .vine-right {
-      top: -10px;
-      right: -50px;
-      animation-delay: 2s;
-    }
-
   </style>
 </head>
+<body>
 
-<body class="text-white">
+  <header class="glow">
+    Mind Trials — Survive or Lose Everything
+  </header>
 
-  <!-- Loading Spinner -->
-  <div id="loading-spinner" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-90 z-50">
-    <svg class="spinner" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <!-- 12 segments around circle -->
-      <g stroke="#00ffaa" stroke-width="3" stroke-linecap="round" >
-        <line x1="40" y1="10" x2="40" y2="22" />
-        <line x1="54.142" y1="12.858" x2="46.284" y2="23.716" />
-        <line x1="65" y1="26" x2="54" y2="34" />
-        <line x1="69.142" y1="40" x2="57.284" y2="40" />
-        <line x1="65" y1="54" x2="54" y2="46" />
-        <line x1="54.142" y1="67.142" x2="46.284" y2="56.284" />
-        <line x1="40" y1="70" x2="40" y2="58" />
-        <line x1="25.858" y1="67.142" x2="33.716" y2="56.284" />
-        <line x1="15" y1="54" x2="26" y2="46" />
-        <line x1="10.858" y1="40" x2="22.716" y2="40" />
-        <line x1="15" y1="26" x2="26" y2="34" />
-        <line x1="25.858" y1="12.858" x2="33.716" y2="23.716" />
-      </g>
-    </svg>
-  </div>
+  <main>
 
-  <!-- Hero Section -->
-  <section class="text-center py-16 bg-gradient-to-b from-black to-gray-900 relative">
-    <div class="header-container mx-auto inline-block relative">
-      <h1 class="text-5xl md:text-6xl font-bold glitch relative z-20">SNAKEPIT</h1>
-      <!-- SVG vines on either side -->
-      <svg class="vine-snake vine-left" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M4 20c0-4 2-10 8-10s8 6 8 10" />
-        <path d="M4 14c4-2 6-8 12-8" />
-        <circle cx="12" cy="12" r="1" fill="#00ffaa"/>
-      </svg>
-      <svg class="vine-snake vine-right" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M20 20c0-4-2-10-8-10s-8 6-8 10" />
-        <path d="M20 14c-4-2-6-8-12-8" />
-        <circle cx="12" cy="12" r="1" fill="#00ffaa"/>
-      </svg>
-    </div>
-    <p class="mt-4 text-xl md:text-2xl text-gray-300">Multiplayer Survival Party Game</p>
-    <p class="mt-2 text-sm text-gray-400 italic">"Survive the jungle. Outsmart the bots. Don’t trust anyone."</p>
-  </section>
+    <section class="trial">
+      <h2 class="trial-title">The Code of Silence</h2>
+      <div class="subtitle">Team of 3 players</div>
+      <p>You wake up locked in separate cells. Each holds part of a code.</p>
+      <p>Use only light signals to share your clues and unlock the door.</p>
+      <p>One mistake and you’ll feel the shock. Fail, and it’s over.</p>
+    </section>
 
-  <!-- Game Info -->
-  <section class="px-8 py-12 max-w-4xl mx-auto">
-    <div class="grid grid-cols-2 gap-6 text-sm md:text-base text-gray-300">
-      <div><strong> Genre:</strong> Survival / Party Elimination</div>
-      <div><strong> Players:</strong> 30 per match</div>
-      <div><strong> Platform:</strong> PC + console (maybe)</div>
-      <div><strong> Rating:</strong> Teen (13+)</div>
-    </div>
-    <p class="mt-8 text-lg md:text-xl text-white">
-      You and 29 others are kidnapped by a mysterious person who calls himself <span class="glitch font-bold">"the king Cobra"</span> and dropped in a jungle dome. 
-      Compete in 6 twisted Trials, then battle it out in the deadly final round: <span class="glitch font-bold">The Snakepit</span>.
-    </p>
-  </section>
+    <section class="trial">
+      <h2 class="trial-title">Circuit of Death</h2>
+      <div class="subtitle">Solo player</div>
+      <p>You enter a room filled with switches connected to deadly circuits.</p>
+      <p>Activate them in the right order to escape.</p>
+      <p>A wrong move resets progress — and brings pain.</p>
+    </section>
 
-  <!-- Trial Categories -->
-  <section class="px-8 py-12 bg-gray-900 relative">
-    <div class="header-container mb-6">
-      <h2 class="text-3xl font-bold glitch">Trial Categories</h2>
-      <svg class="vine-snake vine-left" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M4 20c0-4 2-10 8-10s8 6 8 10" />
-        <path d="M4 14c4-2 6-8 12-8" />
-        <circle cx="12" cy="12" r="1" fill="#00ffaa"/>
-      </svg>
-      <svg class="vine-snake vine-right" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M20 20c0-4-2-10-8-10s-8 6-8 10" />
-        <path d="M20 14c-4-2-6-8-12-8" />
-        <circle cx="12" cy="12" r="1" fill="#00ffaa"/>
-      </svg>
-    </div>
-    <div class="grid grid-cols-2 md:grid-cols-3 gap-6 text-sm text-gray-300">
-      <a href="mind.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Mind – Puzzles, memory</a>
-      <a href="strength.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Strength – Timing, force</a>
-      <a href="agility.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Agility – Movement, reflexes</a>
-      <a href="deception.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Deception – Bluff, detect lies</a>
-      <a href="social.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Social – Alliances & betrayal</a>
-      <a href="chaos.html" class="hover:bg-black p-4 border border-green-600 rounded-lg trial-card">Chaos – Total unpredictability</a>
-    </div>
-  </section>
+    <section class="trial">
+      <h2 class="trial-title">Reflections of Terror</h2>
+      <div class="subtitle">Pair of players</div>
+      <p>One sees the path ahead, the other can’t see a thing.</p>
+      <p>The guide must talk the blind player through the maze.</p>
+      <p>One wrong step ends it all.</p>
+    </section>
 
-  <!-- Call to Action -->
-  <section class="text-center my-12">
-       </section>
+  </main>
 
-  <!-- Fireflies -->
-  <div id="fireflies"></div>
-
-  <script>
-    // Hide loading spinner after 2.5 seconds
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        const spinner = document.getElementById('loading-spinner');
-        if (spinner) spinner.style.display = 'none';
-      }, 2500);
-    });
-
-    // Firefly creation
-    const firefliesContainer = document.getElementById('fireflies');
-    for (let i = 0; i < 15; i++) {
-      const firefly = document.createElement('div');
-      firefly.classList.add('firefly');
-      firefly.style.top = Math.random() * 100 + 'vh';
-      firefly.style.left = Math.random() * 100 + 'vw';
-      firefly.style.animationDelay = (Math.random() * 3) + 's';
-      firefliesContainer.appendChild(firefly);
-    }
-  </script>
-
-  <style>
-    /* Trial cards with pulse and snake tongue */
-    .trial-card {
-      background: linear-gradient(135deg, #004422, #006633);
-      border: 2px solid #00ffaa;
-      border-radius: 9999px;
-      padding: 1rem 2rem;
-      color: #ccffcc;
-      font-weight: 600;
-      position: relative;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
-      user-select: none;
-      display: inline-block;
-      text-align: center;
-      filter: drop-shadow(0 0 5px #00ffaa);
-      text-decoration: none;
-    }
-
-    .trial-card:hover {
-      transform: scale(1.05) translateY(-5px);
-      box-shadow:
-        0 0 10px #00ffaa,
-        0 0 20px #00ffaa,
-        0 0 30px #00ffaa;
-      border-color: #00ffcc;
-      color: #00ffcc;
-    }
-
-    .trial-card::after {
-      content: "";
-      position: absolute;
-      width: 8px;
-      height: 2px;
-      background: #00ffaa;
-      border-radius: 9999px;
-      top: 50%;
-      left: -12px;
-      transform: translateY(-50%) scaleX(0);
-      transform-origin: left center;
-      transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 5px #00ffaa);
-    }
-
-    .trial-card:hover::after {
-      transform: translateY(-50%) scaleX(1);
-      animation: flickerTongue 0.5s infinite alternate;
-    }
-
-    @keyframes flickerTongue {
-      0% { transform: translateY(-50%) scaleX(1); }
-      50% { transform: translateY(-48%) scaleX(1.2); }
-      100% { transform: translateY(-50%) scaleX(1); }
-    }
-
-    /* Neon glowing button with bounce */
-    .neon-btn {
-      display: inline-block;
-      padding: 0.75rem 2rem;
-      font-weight: 700;
-      font-family: 'Orbitron', monospace;
-      font-size: 1.25rem;
-      color: #00ffaa;
-      border: 3px solid #00ffaa;
-      border-radius: 1.5rem;
-      background: transparent;
-      cursor: pointer;
-      filter: drop-shadow(0 0 6px #00ffaa);
-      position: relative;
-      transition: color 0.3s ease, border-color 0.3s ease, transform 0.3s ease;
-      user-select: none;
-      text-align: center;
-      text-decoration: none;
-    }
-
-    .neon-btn:hover {
-      color: #00ffc9;
-      border-color: #00ffc9;
-      filter: drop-shadow(0 0 15px #00ffc9);
-      animation: bounce 0.3s ease forwards;
-    }
-
-    @keyframes bounce {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-      100% { transform: translateY(0); }
-    }
-
-    .neon-btn::after {
-      content: "";
-      position: absolute;
-      width: 10px;
-      height: 3px;
-      background: #00ffaa;
-      border-radius: 9999px;
-      top: 50%;
-      left: -18px;
-      transform: translateY(-50%) scaleX(0);
-      transform-origin: left center;
-      transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 6px #00ffaa);
-    }
-
-    .neon-btn:hover::after {
-      transform: translateY(-50%) scaleX(1);
-      animation: flickerTongue 0.6s infinite alternate;
-    }
-  </style>
 </body>
 </html>
